--- a/assign_s3.ipynb
+++ b/assign_s3.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1>Segmenting and Clustering Neighborhoods in Toronto</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis by Rafael Faria Pinheiro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><font color='red'>I YOU CAN'T SEE THE MAPS (DUE TO GITHUB), PLEASE CHECK THE HTML VERSION OF THIS NOTEBOOK </font>\n",
+    "<a href=https://s3-sa-east-1.amazonaws.com/www.rafael.digital/temp/assign_s3.html>HERE</a></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2> Part 1</h2>"
    ]
   },
